--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,8 @@
           <p><input type="file" name="file"></p>
           <p><input type="submit" value="Submit"></p>
         </form>
+    
+        <p><a href = "/about">See our about page for more information.</a></p>
 
     <h1>Video Streaming Emotion Classification</h1>
     <img src="{{ url_for('video_feed') }}">
