Added an image to the about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
       <head>
       </head>
       <body>
-        <h2>About our project</h2>
+        <h1>About our project</h1>
         <p>The creators of this project are Rohan Joshi and Christopher Rodriguez. 
             We are both students at the Bergen County Academies and this is our 
             miidyear project. We used a variety of libraries in our project. We used opencv for 
@@ -13,5 +13,6 @@
             Also, your webcam is used on our homepage for real time video streaming of emotion.
             We hope you enjoy our project!
         </p>
+        </img src = "https://www.researchgate.net/profile/John_Chris_Kwong/publication/329290966/figure/fig1/AS:730534921637890@1551184506993/Seven-basic-human-emotions.png">
       </body>
 </html>
