Fixed an about page image bug

--- a/templates/about.html
+++ b/templates/about.html
@@ -12,7 +12,7 @@
             can upload an image of a face, and our classifier will classify the photo for them. 
             Also, your webcam is used on our homepage for real time video streaming of emotion.
             We hope you enjoy our project!
+        <img src = "https://www.researchgate.net/profile/John_Chris_Kwong/publication/329290966/figure/fig1/AS:730534921637890@1551184506993/Seven-basic-human-emotions.png"></img>
         </p>
-        </img src = "https://www.researchgate.net/profile/John_Chris_Kwong/publication/329290966/figure/fig1/AS:730534921637890@1551184506993/Seven-basic-human-emotions.png">
       </body>
 </html>
