--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,11 @@
 <!doctype html>
     <html>
       <head>
+        <style>
+            p{
+                font-size: 20px;
+            }
+        </style>
       </head>
       <body>
         <h1>About our project</h1>
@@ -12,6 +17,8 @@
             can upload an image of a face, and our classifier will classify the photo for them. 
             Also, your webcam is used on our homepage for real time video streaming of emotion.
             We hope you enjoy our project!
+        
+        <!-- Image of the 7 emotions our model detects -->
         <img src = "https://www.researchgate.net/profile/John_Chris_Kwong/publication/329290966/figure/fig1/AS:730534921637890@1551184506993/Seven-basic-human-emotions.png"></img>
         </p>
       </body>
