--- a/templates/about.html
+++ b/templates/about.html
@@ -4,22 +4,35 @@
         <style>
             p{
                 font-size: 20px;
+                margin-bottom: 40px
+            }
+
+            h1{
+                font-size: 40px;
+            }
+
+            body{
+                background-color: lightgray;
             }
         </style>
       </head>
       <body>
-        <h1>About our project</h1>
-        <p>The creators of this project are Rohan Joshi and Christopher Rodriguez. 
+        <h1 style = "text-align: center;">About our project</h1>
+
+        <p>        The creators of this project are Rohan Joshi and Christopher Rodriguez. 
             We are both students at the Bergen County Academies and this is our 
-            miidyear project. We used a variety of libraries in our project. We used opencv for 
+            midyear project. We used a variety of libraries in our project. We used opencv for 
             facial detection, pytorch for emotion classification, Pillow for image processing, 
             and numpy for array manipulation. The way this project works is that anyone 
             can upload an image of a face, and our classifier will classify the photo for them. 
             Also, your webcam is used on our homepage for real time video streaming of emotion.
             We hope you enjoy our project!
         
+        <a href = "/">Go back to home page</a>
         <!-- Image of the 7 emotions our model detects -->
-        <img src = "https://www.researchgate.net/profile/John_Chris_Kwong/publication/329290966/figure/fig1/AS:730534921637890@1551184506993/Seven-basic-human-emotions.png"></img>
+        <center>
+        <img src = "https://www.researchgate.net/profile/John_Chris_Kwong/publication/329290966/figure/fig1/AS:730534921637890@1551184506993/Seven-basic-human-emotions.png" height = 270px width = 480px></img>
+        </center>
         </p>
       </body>
 </html>
