--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,25 @@
 <!doctype html>
     <html>
       <head>
+      <style>
+        p{
+        font-size: 20px;
+        margin-right: 100px
+        }
+        body{
+          background-color: lightgray;
+        }
+      </style>
       </head>
       <body>
-        <h2>Welcome to the Emotion Detector Project by Rohan Joshi and Christopher Rodriguez</h2>
-        The goal of this project is to classify emotions into 7 main classes (some of the most common emotions). <br>
+        <h1 style = "text-align: center;">Welcome to the Emotion Detector Project by Rohan Joshi and Christopher Rodriguez</h1>
+
+        <p>The goal of this project is to classify emotions into 7 main classes (some of the most common emotions).
         Once you enter an image, a convolutional neural network will classify your
-        image into one of these classes. <br> This project uses the FER2013 dataset to train 
+        image into one of these classes. This project uses the FER2013 dataset to train 
          (<a href = "https://www.kaggle.com/ananthu017/emotion-detection-fer">here</a>)
         so please put the images in that format if you hope to obtain accurate results</p>
+
         <p>Please upload files here</p>
         <form method="POST" action="" enctype="multipart/form-data">
           <p><input type="file" name="file"></p>
@@ -16,8 +27,9 @@
         </form>
     
         <p><a href = "/about">See our about page for more information.</a></p>
+        <p><a href = "/creators">See our creators page for more information.</a></p>
 
-    <h1>Video Streaming Emotion Classification</h1>
-    <img src="{{ url_for('video_feed') }}">
+    <h1 style = "text-align: center;">Video Streaming Emotion Classification</h1>
+    <center><img src="{{ url_for('video_feed') }}"></center>
       </body>
 </html>
