--- a/templates/creators.html
+++ b/templates/creators.html
@@ -12,13 +12,13 @@
         </style>
       </head>
       <body>
-        <h1 style = "text-align: center;">About our project</h1>
+        <h1 style = "text-align: center;">Creators</h1>
         <p>The first creator of this project is Rohan Joshi. He worked on the backend 
             neural network architecture, facial detection, and the front end video streaming. 
             He also helped connect the backend and frontend, as well as other frontend functionality. 
         </p>
         <center>
-        <img src = "https://mail.google.com/mail/u/0?ui=2&ik=1b6c991477&attid=0.1.1&permmsgid=msg-f:1688170720567931804&th=176d965377aab39c&view=fimg&sz=s0-l75-ft&attbid=ANGjdJ9UOjABtarQ3qDev-HuVorZE3hKCZdUzDmaD9rx8zs0jbO_SS7st70azCU-ytRRKE1qS9jFmXQN0Gg0JrB4tfEAYFktqYV6aOuJXIZp88WmpY5KlGU4musMsxU&disp=emb" height = 300 width = 400></img>
+        <img src = "https://i.ibb.co/FHGpfWH/IMG-0481-1.jpg" height = 300 width = 400></img>
         </center>
         <p>
         The second creator of this project is Christopher Rodriguez. He helped with the design and visual 
