--- a/templates/index.html
+++ b/templates/index.html
@@ -7,18 +7,20 @@
         margin-right: 100px
         }
         body{
-          background-color: lightgray;
+          background-color: lightblue;
         }
       </style>
       </head>
       <body>
-        <h1 style = "text-align: center;">Welcome to the Emotion Detector Project by Rohan Joshi and Christopher Rodriguez</h1>
+        <h1 style = "text-align: center;">Emotion Detector Project</h1>
+        <h2 style = "text-align: center;">Rohan Joshi and Christopher Rodriguez</h2>
 
         <p>The goal of this project is to classify emotions into 7 main classes (some of the most common emotions).
         Once you enter an image, a convolutional neural network will classify your
         image into one of these classes. This project uses the FER2013 dataset to train 
          (<a href = "https://www.kaggle.com/ananthu017/emotion-detection-fer">here</a>)
-        so please put the images in that format if you hope to obtain accurate results</p>
+        so please put the images in that format if you hope to obtain accurate results when uploading. Otherwise, 
+        you can wait a couple moments for your webcam to turn on for live emotion detection and classification.</p>
 
         <p>Please upload files here</p>
         <form method="POST" action="" enctype="multipart/form-data">
