--- a/templates/about.html
+++ b/templates/about.html
@@ -12,7 +12,7 @@
             }
 
             body{
-                background-color: lightgray;
+                background-color: lightyellow;
             }
         </style>
       </head>
@@ -23,7 +23,8 @@
             We are both students at the Bergen County Academies and this is our 
             midyear project. We used a variety of libraries in our project. We used opencv for 
             facial detection, pytorch for emotion classification, Pillow for image processing, 
-            and numpy for array manipulation. The way this project works is that anyone 
+            numpy for array manipulation, pandas for data manipulation, and kaggle for dataset
+            handling and gpu use. The way this project works is that anyone 
             can upload an image of a face, and our classifier will classify the photo for them. 
             Also, your webcam is used on our homepage for real time video streaming of emotion.
             We hope you enjoy our project!
