Added to website

--- a/templates/about.html
+++ b/templates/about.html
@@ -12,14 +12,14 @@
             }
 
             body{
-                background-color: lightgray;
+                background-color: rgb(19, 21, 102);
             }
         </style>
       </head>
       <body>
-        <h1 style = "text-align: center;">About our project</h1>
+        <h1 style = "text-align: center; color: lightgray; text-shadow: 2px 2px rgb(28, 223, 86);">About our project</h1>
 
-        <p>        The creators of this project are Rohan Joshi and Christopher Rodriguez. 
+        <p style = "color: lightgray">        The creators of this project are Rohan Joshi and Christopher Rodriguez. 
             We are both students at the Bergen County Academies and this is our 
             midyear project. We used a variety of libraries in our project. We used opencv for 
             facial detection, pytorch for emotion classification, Pillow for image processing, 
