--- a/templates/creators.html
+++ b/templates/creators.html
@@ -7,23 +7,25 @@
                 margin-right: 100px;
             }
             body{
-                background-color: lightgray;
+                background-color: rgb(255, 251, 162);
             }
         </style>
       </head>
       <body>
-        <h1 style = "text-align: center;">About our project</h1>
-        <p>The first creator of this project is Rohan Joshi. He worked on the backend 
+        <h1 style = "text-align: center; text-shadow: 2px 2px rgb(28, 223, 86);">About our project</h1>
+        <p style = "border: 2px solid red;">The first creator of this project is Rohan Joshi. He worked on the backend 
             neural network architecture, facial detection, and the front end video streaming. 
             He also helped connect the backend and frontend, as well as other frontend functionality. 
         </p>
         <center>
-        <img src = "https://mail.google.com/mail/u/0?ui=2&ik=1b6c991477&attid=0.1.1&permmsgid=msg-f:1688170720567931804&th=176d965377aab39c&view=fimg&sz=s0-l75-ft&attbid=ANGjdJ9UOjABtarQ3qDev-HuVorZE3hKCZdUzDmaD9rx8zs0jbO_SS7st70azCU-ytRRKE1qS9jFmXQN0Gg0JrB4tfEAYFktqYV6aOuJXIZp88WmpY5KlGU4musMsxU&disp=emb" height = 300 width = 400></img>
+        <img src = "https://mail.google.com/mail/u/0?ui=2&ik=1b6c991477&attid=0.1.1&permmsgid=msg-f:164088170720567931804&th=176d965377aab39c&view=fimg&sz=s0-l75-ft&attbid=ANGjdJ9UOjABtarQ3qDev-HuVorZE3hKCZdUzDmaD9rx8zs0jbO_SS7st70azCU-ytRRKE1qS9jFmXQN0Gg0JrB4tfEAYFktqYV6aOuJXIZp88WmpY5KlGU4musMsxU&disp=emb" height = 300 width = 400></img>
+        <img src="image.jpg" alt= "Christopher Rodriguez">
         </center>
-        <p>
+        <p style = "border: 2px solid greenyellow;">
         The second creator of this project is Christopher Rodriguez. He helped with the design and visual 
         components of the front-end. 
         </p>
+        <br>
         <a href = "/">Go back to home</a>
       </body>
-</html>
+</html> 
