--- a/templates/index.html
+++ b/templates/index.html
@@ -7,12 +7,12 @@
         margin-right: 100px
         }
         body{
-          background-color: lightgray;
+          background-color: rgb(11, 229, 245);
         }
       </style>
       </head>
       <body>
-        <h1 style = "text-align: center;">Welcome to the Emotion Detector Project by Rohan Joshi and Christopher Rodriguez</h1>
+        <h1 style = "text-align: center; text-shadow: 2px 2px rgb(28, 223, 86);">Welcome to the Emotion Detector Project by Rohan Joshi and Christopher Rodriguez</h1>
 
         <p>The goal of this project is to classify emotions into 7 main classes (some of the most common emotions).
         Once you enter an image, a convolutional neural network will classify your
@@ -20,10 +20,10 @@
          (<a href = "https://www.kaggle.com/ananthu017/emotion-detection-fer">here</a>)
         so please put the images in that format if you hope to obtain accurate results</p>
 
-        <p>Please upload files here</p>
+        <p style = "color: red;">Please upload files here</p>
         <form method="POST" action="" enctype="multipart/form-data">
-          <p><input type="file" name="file"></p>
-          <p><input type="submit" value="Submit"></p>
+          <p style = "color: red; border: 2px solid red; outline-style: solid;"><input type="file" name="file"></p>
+          <p style = "color: red; border: 2px solid red; outline-style: solid;"><input type="submit" value="Submit"></p>
         </form>
     
         <p><a href = "/about">See our about page for more information.</a></p>
