changed up color scheme of website

--- a/templates/about.html
+++ b/templates/about.html
@@ -12,14 +12,17 @@
             }
 
             body{
-                background-color: rgb(19, 21, 102);
+                background-color: #B4DFE5;
+            }
+            a{
+                color: #F4976C;
             }
         </style>
       </head>
       <body>
-        <h1 style = "text-align: center; color: lightgray; text-shadow: 2px 2px rgb(28, 223, 86);">About our project</h1>
+        <h1 style = "text-align: center; color: #303C6C; text-shadow: 2px 2px #D2FDFF;">About our project</h1>
 
-        <p style = "color: lightgray">        The creators of this project are Rohan Joshi and Christopher Rodriguez. 
+        <p style = "color: #303C6C;">        The creators of this project are Rohan Joshi and Christopher Rodriguez. 
             We are both students at the Bergen County Academies and this is our 
             midyear project. We used a variety of libraries in our project. We used opencv for 
             facial detection, pytorch for emotion classification, Pillow for image processing, 
