--- a/templates/index.html
+++ b/templates/index.html
@@ -4,19 +4,18 @@
       <style>
         p{
         font-size: 20px;
-        margin-right: 100px
+        margin-right: 100px;
+        color: #24305E
         }
         body{
-          background-color: rgb(11, 229, 245);
+          background-color: #A8D0E6;
         }
       </style>
       </head>
       <body>
-        <h1 style = "text-align: center; text-shadow: 2px 2px rgb(28, 223, 86);">Welcome to the Emotion Detector Project by Rohan Joshi and Christopher Rodriguez</h1>
-=======
-        <h1 style = "text-align: center;">Emotion Detector Project</h1>
+        <h1 style = "text-align: center; text-shadow: 2px 2px #F8E9A1;">Emotion Detector Project</h1>
         <h2 style = "text-align: center;">Rohan Joshi and Christopher Rodriguez</h2>
-
+=======
         <p>The goal of this project is to classify emotions into 7 main classes (some of the most common emotions).
         Once you enter an image, a convolutional neural network will classify your
         image into one of these classes. This project uses the FER2013 dataset to train 
@@ -24,10 +23,10 @@
         so please put the images in that format if you hope to obtain accurate results when uploading. Otherwise, 
         you can wait a couple moments for your webcam to turn on for live emotion detection and classification.</p>
 
-        <p style = "color: red;">Please upload files here</p>
+        <p style = "color: #F76C6C;">Please upload files here</p>
         <form method="POST" action="" enctype="multipart/form-data">
-          <p style = "color: red; border: 2px solid red; outline-style: solid;"><input type="file" name="file"></p>
-          <p style = "color: red; border: 2px solid red; outline-style: solid;"><input type="submit" value="Submit"></p>
+          <p style = "color: #F76C6C; border: 2px solid #F76C6C; outline-style: solid;"><input type="file" name="file"></p>
+          <p style = "color: #F76C6C; border: 2px solid #F76C6C; outline-style: solid;"><input type="submit" value="Submit"></p>
         </form>
     
         <p><a href = "/about">See our about page for more information.</a></p>
