more color scheme and font changes

--- a/templates/creators.html
+++ b/templates/creators.html
@@ -18,14 +18,14 @@
             He also helped connect the backend and frontend, as well as other frontend functionality. 
         </p>
         <center>
-        <img src = "https://i.ibb.co/FHGpfWH/IMG-0481-1.jpg" height = 300 width = 400></img>
+        <img src = "https://i.ibb.co/FHGpfWH/IMG-0481-1.jpg" alt = "Rohan Joshi" height = 300 width = 400></img>
         </center>
         <p style = "border: 2px solid #123C69">
         The second creator of this project is Christopher Rodriguez. He helped with the design and visual 
         components of the front-end. 
         </p>
         <center>
-          <img src="image.jpg" alt= "Christopher Rodriguez">
+          <img src="https://i.ibb.co/1rSPwvX/Christopher-Rodriguez-photo.jpg" alt= "Christopher Rodriguez" height = 400 width = 300>
         </center>
         <br>
         <a href = "/">Go back to home</a>
