Added new page and moved links to other pages to the top

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,11 @@
       </style>
       </head>
       <body>
-        <h1 style = "text-align: center; text-shadow: 2px 2px #F8E9A1;">Emotion Detector Project</h1>
-        <h2 style = "text-align: center;">Rohan Joshi and Christopher Rodriguez</h2>
+        <center>
+        <h1><a href = "/about">About</a>      <a href = "/creators">Creators</a>      <a href = "/flow">Flow</a></h1> 
+        <h2 style = "text-align: center; text-shadow: 2px 2px #F8E9A1;">Emotion Detector Project</h2>
+        <h3 style = "text-align: center;">Rohan Joshi and Christopher Rodriguez</h3>
+      </center>
 =======
         <p>The goal of this project is to classify emotions into 7 main classes (some of the most common emotions).
         Once you enter an image, a convolutional neural network will classify your
@@ -27,10 +30,6 @@
         <form method="POST" action="" enctype="multipart/form-data">
           <p style = "color: #F76C6C; border: 2px solid #F76C6C; outline-style: solid;"><input type="file" name="file"></p>
           <p style = "color: #F76C6C; border: 2px solid #F76C6C; outline-style: solid;"><input type="submit" value="Submit"></p>
-        </form>
-    
-        <p><a href = "/about">See our about page for more information.</a></p>
-        <p><a href = "/creators">See our creators page for more information.</a></p>
 
     <h1 style = "text-align: center;">Video Streaming Emotion Classification</h1>
     <center><img src="{{ url_for('video_feed') }}"></center>
